--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">hotel-reviewFrontend</string>
+    <string name="invalid_email">invalid email</string>
+    <string name="loading">Loading...</string>
+    <string name="empty_fields">empty fields! All field are required</string>
+    <string name="base_url">http://localhost:8080</string>
+    <string name="username_already_used">username already used</string>
+    <string name="something_went_wrong">500 internal server error</string>
 </resources>
