--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="invalid_email">invalid email</string>
     <string name="loading">Loading...</string>
     <string name="empty_fields">empty fields! All field are required</string>
-    <string name="base_url">http://localhost:8080</string>
+    <string name="base_url">http://localhost:8080/hotel_review/api</string>
     <string name="username_already_used">username already used</string>
     <string name="something_went_wrong">500 internal server error</string>
 </resources>
