--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,12 @@
     <string name="app_name">hotel-reviewFrontend</string>
     <string name="invalid_email">invalid email</string>
     <string name="loading">Loading...</string>
-    <string name="empty_fields">empty fields! All field are required</string>
-    <string name="base_url">http://localhost:8080/hotel_review/api</string>
-    <string name="username_already_used">username already used</string>
+    <string name="empty_fields">empty fields! All fields are required</string>
+    <string name="base_url">http://10.0.2.2:8080/hotel_review/api</string> <!-- perche android gira su una macchina virtuale -->
     <string name="something_went_wrong">500 internal server error</string>
+    <string name="passwords_not_match">Passwords entered do not match</string>
+    <string name="password_too_short">Password must have at least 7 characters</string>
+    <string name="signin_ok">Your account has been registered successfully</string>
+    <string name="Conflict">This username already exists</string>
+
 </resources>
