update user completed update username bug

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,9 @@
     <string name="username">username:</string>
     <string name="update_profile">update profile</string>
     <string name="my_reviews">my reviews</string>
+    <string name="update_user_ok">Your profile is updated succesfully</string>
+    <string name="update_username_ok">Your username is updated succesfully</string>
+
 
 
     <!-- TODO: Remove or change this placeholder text -->
