--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="signin_ok">Your account has been registered successfully</string>
     <string name="login_ok">Login successfully</string>
     <string name="username_or_password_wrong">Your username or password is incorrect</string>
+    <string name="password_wrong">Your old password is incorrect</string>
     <string name="Conflict">This username already exists</string>
     <string name="name">name:</string>
     <string name="surname">surname:</string>
@@ -20,16 +21,20 @@
     <string name="update_profile">update profile</string>
     <string name="login">Login</string>
     <string name ="go_to_sign_in">Go to signIn</string>
+    <string name ="review_ok">Your review is inserted successfully</string>
 
-    <string name="update_user_ok">Your profile is updated succesfully</string>
-    <string name="update_password_ok">Your password is updated succesfully</string>
+
+    <string name="update_user_ok">Your profile is updated successfully</string>
+    <string name="update_password_ok">Your password is updated successfully</string>
+    <string name="new_password_equal_old_password">Your old and new passwords are equals</string>
+
 
 
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="save">save</string>
-    <string name="aggiungiRecensione">my review</string>
+    <string name="my_reviews">my reviews</string>
     <string name="logout">logout</string>
     <string name="rating_review">review rate</string>
 
