--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,5 +34,6 @@
     <string name="rating_review">review rate</string>
     <string name="delete">user deleted successufylly</string>
     <string name="user_not_found">user not found</string>
+    <string name="role">Role updated successfully</string>
 
 </resources>
