--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
     <string name="app_name">hotel-reviewFrontend</string>
+    <string name ="title_app">HOTEL ADVISOR </string>
+    <string name ="welcome">WELCOME </string>
     <string name="invalid_email">invalid email</string>
     <string name="loading">Loading...</string>
     <string name="empty_fields">empty fields! All fields are required</string>
@@ -12,19 +14,24 @@
     <string name="username_or_password_wrong">Your username or password is incorrect</string>
     <string name="password_wrong">Your old password is incorrect</string>
     <string name="Conflict">This username already exists</string>
-    <string name="name">name:</string>
-    <string name="surname">surname:</string>
-    <string name="email">email:</string>
-    <string name="address">address:</string>
-    <string name="phone">phone:</string>
-    <string name="username">username:</string>
-    <string name="update_profile">update profile</string>
+    <string name="name">Name:</string>
+    <string name="surname">Surname:</string>
+    <string name="email">Email:</string>
+    <string name="address">Address:</string>
+    <string name="phone">Phone:</string>
+    <string name="username">Username:</string>
+    <string name ="password">Password: </string>
+    <string name ="confirm_password">Confirm password: </string>
+    <string name ="old_password">Old password: </string>
+    <string name ="new_password">New password: </string>
+    <string name="update_profile">Update profile</string>
     <string name="login">Login</string>
     <string name ="go_to_sign_in">Go to signIn</string>
     <string name ="review_ok">Your review is inserted successfully</string>
     <string name ="review_already_in_DB">You have already done a review for this hotel</string>
     <string name ="zipCode_5_numeric">Zip Code must have 5 numeric characters</string>
     <string name ="delete_user_ok">Your account is deleted successfully </string>
+
 
 
 
@@ -45,5 +52,13 @@
     <string name="user_not_found">user not found</string>
     <string name="role">Role updated successfully</string>
     <string name="add_review">add review</string>
+    <string name ="title">Title </string>
+    <string name ="text">Text </string>
+    <string name ="hotel">Hotel </string>
+    <string name ="zipCode">Zip code </string>
+    <string name ="enter">Enter </string>
+
+
+
 
 </resources>
