--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,7 +48,7 @@
     <string name="my_reviews">my reviews</string>
     <string name="logout">logout</string>
     <string name="rating_review">review rate</string>
-    <string name="delete">user deleted successufylly</string>
+    <string name="delete">user deleted successfully</string>
     <string name="user_not_found">User not found</string>
     <string name="role">Role updated successfully</string>
     <string name="add_review">add review</string>
